src/main/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-quarkus
  namespace: todo-project-jenkins
spec:
  paused: true
  selector:
    matchLabels:
      app: todo-api-quarkus
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-api-quarkus
    spec:
      containers:
        - name: todo-api-quarkus
          image: todo-api-quarkus
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      serviceAccountName: todo-api-quarkus
