src/main/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-api-quarkus
  namespace: todo-project-jenkins
spec:
  path: /
  to:
    kind: Service
    name: todo-api-quarkus
  port:
    targetPort: http
